--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1643,7 +1643,7 @@ CHL_deal_with_the_aristocracy_desc:0 ""
 CHL_infiltrtate_the_army:0 "Infiltrate The Army"
 CHL_infiltrtate_the_army_desc:0 ""
 CHL_civic_leagues:0 "The Leagues Of Civic Action"
-CHL_civic_leagues_desc:0 ""
+CHL_civic_leagues_desc:0 "Paramilitary leagues have formed all across our country, supporting our nationalist cause. To increase pressure the current incompetent government, we should unite all of these leagues into one National Civic League of Action."
 CHL_movement_expansion:0 "Movement Expansion"
 CHL_movement_expansion_desc:0 ""
 CHL_end_with_old_parties:0 "End The Old Parties"
@@ -1689,7 +1689,7 @@ CHL_illapel_choapa_desc:0 ""
 CHL_longitud_norte:0 "Unify Northern Railways"
 CHL_longitud_norte_desc:0 "we have finished them, however, they are not interconnected, lets fix that"
 CHL_modernization_of_santiago:0 "Modernization Of Santiago"
-CHL_modernization_of_santiago_desc:0 "currently santiago is the same shithole it was the 1850s, its time to fix that"
+CHL_modernization_of_santiago_desc:0 "If we want to improve our economy, the modernization of our capital city, Santiago will be extremely important as it is the heart of the nation. We must modernize the city onto European standards if we want to achieve a bustling economy."
 CHL_sewage_system_for_santiago:0 "First Sewage System"
 CHL_sewage_system_for_santiago_desc:0 "bruh its the fucking capital of chile and there isnt potable water"
 CHL_mapocho_station:0 "Found The Mapocho Station"
@@ -1708,7 +1708,7 @@ CHL_club_de_la_union_desc:0 "fucking elite and its country club"
 CHL_expand_the_chilean_electric_tranway:0 "Expand The Santiago Electric Tranway"
 CHL_expand_the_chilean_electric_tranway_desc:0 "we now shall cover the entirety of santiago"
 CHL_reconstruccion_of_valparaiso:0 "Reconstruct Valparaiso"
-CHL_reconstruccion_of_valparaiso_desc:0 "the most important port in the south pacific is literally destroyed by an earthquake, lets end this"
+CHL_reconstruccion_of_valparaiso_desc:0 "The 1906 Valparaiso earthquake completly destroyed the city of Valparaiso on the Pacific, leaving it in ruins. To this day, the effects of the earthquake are still seen in many places in the city. The city must undergo some final reconstruction efforts to fully make sure all damage is repaired."
 CHL_la_idea_urbana:0 "La Idea Urbana"
 CHL_la_idea_urbana_desc:0 ""
 CHL_choose_a_project:0 "Choose A Project"
@@ -1802,9 +1802,9 @@ CHL_reconstruccion_of_tranway_system_desc:0 ""
 CHL_reconstruccion_of_churchesx:0 "Reconstruct Churches"
 CHL_reconstruccion_of_churchesx_desc:0 ""
 CHL_reform_the_promotion_system:0 "Reform The Promotion System"
-CHL_reform_the_promotion_system_desc:0 "The promotion system in our country is broken and many are promoted through nepotism. As a step to keep on reforming our army, we will put an end to this nepotism."
+CHL_reform_the_promotion_system_desc:0 "The promotion system in our country is broken, dominated by nepotism. To build a stronger, meritocratic army, we must end this practice. Family connections have overshadowed talent and dedication. By putting an end to this, we will ensure our officers are competent and respected, fostering a professional fighting force."
 CHL_german_rifles:0 "Mauser 1895 Of Chilean Model"
-CHL_german_rifles_desc:0 "During our arms race with Argentina in 1896-1898, we purchased a lot of rifles, specifically the Mauser 1895 from Germany. To continue arming our military, we should purchase more of these rifles used by the greatest military power, Germany which will surely make our military strong too."
+CHL_german_rifles_desc:0 "Our army is in need of many more firearms to supply its needs. One efficent way to acquire these guns will be buying them from a foreign arms manufacturer. We can purchase from the gun manufacturer Steyr, an arms company who produces the reliable Mauser 1895 and modify them to the needs of the Chilean army."
 CHL_ley_four_thousand_fourtythree:0 "Law 4.043"
 CHL_ley_four_thousand_fourtythree_desc:0 "We can't just rely on foreign arms, but we also can't rely on our very small domestic production. We must increase our domestic arms manufacturing, and to do that, we will turn to FAMAE, our state owned arms manufacturer, to expand its production and make all kinds of machinery."
 CHL_armeros_school:0 "Gunsmiths School"
@@ -1812,7 +1812,7 @@ CHL_armeros_school_desc:0 "make those mills output go up!"
 CHL_igm:0 "Geographical Military Institute"
 CHL_igm_desc:0 "gotta get better at reconing yk"
 CHL_send_officers_to_germany:0 "Send Officers To Germany"
-CHL_send_officers_to_germany_desc:0 ""
+CHL_send_officers_to_germany_desc:0 "To modernize our military and enhance its effectiveness, we will send our best officers to Germany to study their tactics and strategies. By learning from one of the world's leading military powers, our officers will gain invaluable knowledge and experience. Upon their return, we can implement these new techniques, greatly boosting our army."
 CHL_consolidate_prussianism:0 "Consolidate Prussianism"
 CHL_consolidate_prussianism_desc:0 ""
 CHL_military_advisors:0 "Military Advisors"
@@ -1834,7 +1834,7 @@ CHL_attend_grand_palais_desc:0 ""
 CHL_british_planes:0 "Gift From The British"
 CHL_british_planes_desc:0 ""
 CHL_a_year_of_independence:0 "A Century Of Independence"
-CHL_a_year_of_independence_desc:0 ""
+CHL_a_year_of_independence_desc:0 "Today is a glorious day, a century of independence from the Spanish! 100 years ago Chileans rose up against the Spanish and fought a war to form this republic. Celebrations are happening all across the nation for these few days."
 CHL_the_president_who_holds_no_threat:0 "The President Who Holds No Threat"
 CHL_the_president_who_holds_no_threat_desc:0 ""
 CHL_deal_with_the_rotativa_ministerial:0 "Deal With the Rotativa Ministerial"
@@ -2188,7 +2188,7 @@ CHL_hispanic_the_diplomatic_way_desc:0 ""
 CHL_andine_unity:0 "Adine Unity"
 CHL_andine_unity_desc:0 ""
 CHL_legacy_of_the_war_of_the_pacific:0 "Legacy Of The War Of The Pacific"
-CHL_legacy_of_the_war_of_the_pacific_desc:0 ""
+CHL_legacy_of_the_war_of_the_pacific_desc:0 "All the way back in 1879, a war broke out with us against Bolivia and Peru with their secret alliance. Our professional army and navy defeated the much larger Peru and Bolivia, with us conquering the rich nitrate of the north while humilitating both countries. Chile to this day is proud of this victory and must always be."
 CHL_establish_marina_mercante:0 "Establishment Of A Merchant Navy"
 CHL_establish_marina_mercante_desc:0 ""
 CHL_heavily_invest_in_asmar:0 "Heavily Invest In Asmar"
