--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4430,6 +4430,12 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.117.b:0 "Perhaps Reşid Bey was right, we better follow his orders."
  ottoman.117.c:0 "No one can deny state authority."
  TUR_ittihadist_autonomy_diyarbakir:0 "(@TUR §YOttoman İzmir§!):\n   Becomes owner and controller of §Y[350.GetName]§!\n   Becomes owner and controller of §Y[829.GetName]§!\n   Becomes owner and controller of §Y[884.GetName]§!\n   §YOttoman Diyarbekir§! becomes §YAutonomous Vilayet§! of §Y[TUR.GetName]§!   Politics will change\n   §YİTF§! becomes the ruling party.\n   Public elections will not be held.\n   §YMehmed Reşid Bey§!(@TUR) joins §YOttoman Governate of Diyarbekir§!\n   §YMehmed Reşid Bey§! becomes leader for the authoritarian party.\n\n"
+ ottoman.118.t:0 "Central Government Usurps Control"
+ ottoman.118.d:0 "The autonomous Governorate we've establish for ourself has failed to exist. Due to our incapability to maintain public order and fend off foreign invasion, the central government has decided to end our autonomous rule."
+ ottoman.118.a:0 "Our journey continues in [347.GetName]."
+ ottoman.119.t:0 "End of İttihadist Governorate Autonomy"
+ ottoman.119.d:0 "Though İttihadist governorates gained their vast autonomies through our help, their authority must have a limit. As they fail to maintain public order and fend off foreign invasions, we'll have no other option but to end their autonomous rule."
+ ottoman.119.a:0 "They failed to maintain order."
 
  ottoman.120.t:0 "Sects Mobilize"
  ottoman.120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
