--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1021,6 +1021,15 @@
  USA_ottoman_debt_yes_opposite:0 "\n(§Y[USA.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?USA.opda_consumer_goods_opposite|.1%Y]"
  TUR_committee_of_union_and_progress:0 "Committee of Union and Progress"
  TUR_committee_of_union_and_progress_desc:0 "İttihat ve Terakki Fırkası has established itself as a large party with wide reaching members. Though not all of it's members hold posts in the government, the unofficially retain power and influence the empire. The views and actions of certain individuals within the party shape the actions, thus the future of the empire."
+ TUR_committee_member:0 "Committee Member"
+ TUR_committee_member_desc:0 "Since we're a committee member, our little enclave of an autonomous administration receives the support of the state. Yet the survival of our administration depends solely on the final decision of [347.GetName]."
+ TUR_committee_member_1_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if we capitulate"
+ TUR_committee_member_2_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 75%"
+ TUR_committee_member_3_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 70%"
+ TUR_committee_member_4_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 65%"
+ TUR_committee_member_5_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 60%"
+ TUR_committee_member_6_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 55%"
+ TUR_committee_member_7_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 50%"
 
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
  TUR_ottoman_military_mission:0 "Ottoman Military Mission"
