--- a/localisation/english/replace/replace_research_l_english.yml
+++ b/localisation/english/replace/replace_research_l_english.yml
@@ -438,7 +438,7 @@
  improved_oil_plant_desc:0 "Moving previously experimental methods for distillation to large-scale operations will allow us to adapt better to available materials and needs."
  RAILWAY_TITLE:0 "RAILWAY"
  basic_railways:0 "Basic Railway"
- electric_railway_desc:0 "The first commercially successful steam locomotive was Matthew Murray's rack locomotive Salamanca built for the Middleton Railway in Leeds in 1812."
+ electric_railway_desc:0 "The early electrification of railways used direct current (DC) power systems, which were limited in terms of the distance they could transmit power. However, in the early 20th century, alternating current (AC) power systems were developed, which allowed for more efficient power transmission over longer distances."
  narrow_gauge_railway:0 "Narrow-gauge railway"
  narrow_gauge_railway_desc:0 "Since narrow-gauge railways are usually built with tighter curves, smaller structure gauges, and lighter rails, they can be less costly to build, equip, and operate than standard- or broad-gauge railways."
  standard_gauge_railway:0 "Standard Gauge Railway"
