--- a/localisation/english/ww1_super_global_flag_l_english.yml
+++ b/localisation/english/ww1_super_global_flag_l_english.yml
@@ -9,6 +9,7 @@
  kis_treaty_of_versailles:0 "Treaty of Versailles"
  emperor_franz_dead:0 "Franz Joseph I is dead"
  FRA_surrender_alone:0 "Has Capitulated"
+ entente_leader:0 "Has taken over the leadership of the Entente"
 
  great_war_armistice_flag:0 "[Root.GetName] is asking for a truce "
  compeigne_armistice_flag:0 "Compiegne Armistice "
