--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2305,8 +2305,8 @@
  BAY_fascism_DEF:1 "the Kingdom of Bavaria"
  BAY_democratic:1 "Bavaria"
  BAY_democratic_DEF:1 "the Bavarian Free State"
- BAY_socialism:1 "People's State of Bavaria"
- BAY_socialism_DEF:1 "the People's State of Bavaria"
+ BAY_social_democracy:1 "People's State of Bavaria"
+ BAY_social_democracy_DEF:1 "the People's State of Bavaria"
  BAY_reformist_socialism:1 "People's State of Bavaria"
  BAY_reformist_socialism_DEF:1 "the People's State of Bavaria"
  BAY_neutrality:0 "Kingdom of Bavaria"
