--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8050,9 +8050,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
 
 
  #Undead Unicorn's super duper Germany collapse event chain
- freikorps.1.t:0 "The Spartacist Revolution"
- freikorps.1.d:0 "Spartacists led by Karl Liebknekt, Rosa Luxembourg and more have risen up across Germany proclaiming a People's Republic. However, they seem to have vastly overestimated their support base, and the Freikorps is already mobilising to take them down."
- freikorps.1.a:0 "Deal with these socialist scum!"
+ freikorps.1.t:0 "Kurt Eisner Assassinated!"
+ freikorps.1.d:0 "In the midst of the German Revolution, [ROOT.GetNameDef] was established after the overthrow of the monarchy. However, the socialist ruling party was not supported by the majority of the population, and strikes and protests were widespread. As a result, President Kurt Eisner lost the election and was shot dead by a right-wing nationalist on his way to parliament to resign.\nIn his absence, the Soviet and socialists formed a parliamentary coalition government, but within a month it was attacked by communists and anarchists, and the regime collapsed. The first chief of state to come to power was Ernst Toller, but his incompetence led to Eugen Leviné taking power and leading dictatorship of the proletariat."
+ freikorps.1.a:0 "Too much happening to understand..."
  freikorps.2.t:0 "Spartakist Revolution Put Down"
  freikorps.2.d:0 "The Spartakists have been put down in Berlin, however the Bavarian Soviet Republic is still standing as it holds a lot more resentment for the German establishment than people in Berlin did..."
  freikorps.2.a:0 "The Spartakist leaders are caught and executed."
@@ -8089,6 +8089,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  freikorps.11.t:0 "German Reunification"
  freikorps.11.d:0 "After several armed battles that mobilized troops from all over Germany, [FROM.GetAdjective] government announced that they had completely suppressed the rebels and took control of all of Germany. The German Reich is united once again by the Blood and Iron of German nation."
  freikorps.11.a:0 "Die Geschichte wiederholt sich immer wieder."
+ freikorps.12.t:0 "Annexation of Bavaria"
+ freikorps.12.d:0 "During the German Revolution, Bavaria had been out of the control of the central government in Berlin for some time, but it was finally possible to clean up the mess and re-establish the rightful administration in Bavaria. The Freikoprs deserve a great deal of credit for this."
+ freikorps.12.d_alt:0 "During the German revolution, Bavaria had been out of the control of the central government in Berlin for some time, but since we all have the same goal, which is the establishment of the socialist state for the sake of the workers and the people, we have now finally agreed on integration into the unified state."
+ freikorps.12.a:0 "Bavaria returned to the fatherland."
 
  # Frosty's event chain that is triggered when the Russian Empire is victorious before Soviet revolution is fired
  prussian.1.t:0 "The Occupation of Memel"
