--- a/localisation/english/replace/replace_effects_l_english.yml
+++ b/localisation/english/replace/replace_effects_l_english.yml
@@ -1,5 +1,6 @@
 ﻿l_english:
  EFFECT_UNLOCK_DECISION:0 "Unlocks Decision: £decision_icon_small $NAME|H$$EFFECT$"
+ EFFECT_UNLOCK_DECISION_BOP: "Unlocks Balance of Power Decision: £decision_icon_small $NAME|H$$EFFECT$"
  EFFECT_UNLOCK_DECISION_CATEGORY:0 "Unlocks £decision_icon_small $NAME|H$ Decisions."
  EFFECT_ACTIVATE_DECISION:1 "Activate decision: £decision_icon_small $NAME|H$"
  EFFECT_REMOVE_DECISION:0 "Remove decision: £decision_icon_small $NAME|H$
