--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1643,7 +1643,7 @@ CHL_deal_with_the_aristocracy_desc:0 ""
 CHL_infiltrtate_the_army:0 "Infiltrate The Army"
 CHL_infiltrtate_the_army_desc:0 ""
 CHL_civic_leagues:0 "The Leagues Of Civic Action"
-CHL_civic_leagues_desc:0 "Paramilitary leagues have formed all across our country, supporting our nationalist cause. To increase pressure the current incompetent government, we should unite all of these leagues into one National Civic League of Action."
+CHL_civic_leagues_desc:0 "Paramilitary leagues have formed all across our country, supporting our nationalist cause. To increase pressure on the current incompetent government, we should unite all of these leagues into one National Civic League of Action."
 CHL_movement_expansion:0 "Movement Expansion"
 CHL_movement_expansion_desc:0 ""
 CHL_end_with_old_parties:0 "End The Old Parties"
@@ -1661,7 +1661,7 @@ CHL_laws_against_fraud_desc:0 ""
 CHL_islon_toledo:0 "Islon-Toledo Railway"
 CHL_islon_toledo_desc:0 ""
 CHL_territorial_integration_project:0 "Territorial Integration Project"
-CHL_territorial_integration_project_desc:0 "if we wanna be better, we shall build railways all over the country"
+CHL_territorial_integration_project_desc:0 "Our country is large, stretching a very long distance from the north to the south. Much of our territory is still disconnected from the capital administration of Santiago. We should invest in infrastructure and railways across our country, to better connect it with the rest."
 CHL_merge_post_and_telegraph_system:0 "Merge Post And Telegraph Companies"
 CHL_merge_post_and_telegraph_system_desc:0 "gotta make messages get from place to place fast, whatsapp aint a thing yet"
 CHL_expand_railways:0 "Expand Railways"
@@ -1679,7 +1679,7 @@ CHL_castro_ancud_desc:0 ""
 CHL_puerto_montt_castro:0 "Puerto Montt-Castro Railway"
 CHL_puerto_montt_castro_desc:0 ""
 CHL_la_red_norte:0 "La Red Norte"
-CHL_la_red_norte_desc:0 "well build railways in the north"
+CHL_la_red_norte_desc:0 "In the north of our country is the Atacama desert, filled with nitrate reserves crucial to our economy. We should invest in railways connecting to the north, which will help us extract more nitrate to sell abroad and boost our economy."
 CHL_limahuida_cabildo:0 "Limahuida-Cabildo Railway"
 CHL_limahuida_cabildo_desc:0 ""
 CHL_illapel_san_marcos:0 " Illapel-San Marcos Railway"
@@ -1687,11 +1687,11 @@ CHL_illapel_san_marcos_desc:0 ""
 CHL_illapel_choapa:0 " Illapel-Choapa Railway"
 CHL_illapel_choapa_desc:0 ""
 CHL_longitud_norte:0 "Unify Northern Railways"
-CHL_longitud_norte_desc:0 "we have finished them, however, they are not interconnected, lets fix that"
+CHL_longitud_norte_desc:0 "In the north of our country, we have constructed many railways recently but many of them are disconnected from eachother. We should begin unifying these railways, building more routes between them to help connect them and make a more efficent rail network."
 CHL_modernization_of_santiago:0 "Modernization Of Santiago"
 CHL_modernization_of_santiago_desc:0 "If we want to improve our economy, the modernization of our capital city, Santiago will be extremely important as it is the heart of the nation. We must modernize the city onto European standards if we want to achieve a bustling economy."
 CHL_sewage_system_for_santiago:0 "First Sewage System"
-CHL_sewage_system_for_santiago_desc:0 "bruh its the fucking capital of chile and there isnt potable water"
+CHL_sewage_system_for_santiago_desc:0 "In our capital city, Santiago there is a massive lack of potable water for the citizens there. This is completly unacceptable and we must provide clean water to the citizens of the city. We should construct a large scale sewage system as a first step."
 CHL_mapocho_station:0 "Found The Mapocho Station"
 CHL_mapocho_station_desc:0 "gotta make trains go fast"
 CHL_biblioteca_nacional:0 "Found The National Library"
@@ -1776,7 +1776,7 @@ CHL_expand_asmar_desc:0 "in order to be properly prepared for the arrival of the
 CHL_british_designs:0 "British Designs"
 CHL_british_designs_desc:0 "we are friends with the british, they'd love to arm our navy, you see where im going?"
 CHL_arica_lapaz_railway:0 "Arica-La Paz Railway"
-CHL_arica_lapaz_railway_desc:0 "its time to finish that fucking railway and at least have neutral relations with bolivia"
+CHL_arica_lapaz_railway_desc:0 "As a part of our treaty of peace and friendship with Bolivia, we are constructing a railway from Arica on the pacific ocean, to the Bolivian capital of La Paz. This will help strengthen our relations with Bolivia, even with our rough past."
 CHL_open_the_trans_andinian_railway:0 "Open The Transandinian Railway"
 CHL_open_the_trans_andinian_railway_desc:0 "fuck you argentina"
 CHL_national_school_of_engineering:0 "Construct The National School Of Engineering"
