--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2681,7 +2681,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  CHL_Southamerican_dreadnought_race:0 "South American Dreadnought Race"
  CHL_Southamerican_dreadnought_race_desc:0 "lol we gotta have the biggest navy in sa"
  CHL_remnants_of_the_valpo_earthquake:0 "Remnants Of The Valparaiso Earthquake"
- CHL_remnants_of_the_valpo_earthquake_desc:0 "4 years yet valparaiso is still destroyed"
+ CHL_remnants_of_the_valpo_earthquake_desc:0 "In 1906, a devestating earthquake struck the city of Valparaiso, destroying most of the city and the port and killing many. It was a tragedy and we still haven't recovered from it, with signs of its damage still being left all over the city. "
  CHL_la_fronda_aristocratica:0 "La Fronda Aristocratica-Oligarchichal System"
  CHL_la_fronda_aristocratica_desc:0 "If We Do Something Stupid, The Aristocracy Will Reveal Against Us"
  CHL_la_fronda_aristocratica2:0 "La Fronda Aristocratica"
