--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8307,6 +8307,21 @@ USA_georgian_lumber_industry:0 "Expand Georgian Lumber Industry"
 USA_louisiana_railway:0 "Louisiana Railway"
 USA_mississippi_textiles:0 "Improve Mississippi Textiles"
 
+#clark 
+USA_discredit_the_obstructionists:0 "Discredit the Obstructionists"
+USA_discredit_the_obstructionists_desc:0 "Talks of conservative domestic agenda has been stopped dead in the water by progressive opposition. Thus, before we attempt to implement our more conservative agenda, we must crush the progressive majority in congress. Let's smear the progressives as obstructionsist who oppose our centrist agenda."
+USA_clark_defeat_progressives:0 "Defanging the Progressive Movement"
+USA_clark_defeat_progressives_desc:0 "As it current stands, there are too many §SProgressives§! in the United States congress for us to pass our §cConservative§! agenda. We will have to do whatever we can to discredit the progressive movement enough that they suffer huge losses in the 1914 midterms.\n\nThe current percent of congress that aligns with §SProgressive§! views is §Y67%§!, while polls show progressive canidates will hold §Y[?USA_clark_progressive_support]%§! of congressional seats in both chambers after the 1914 elections are concluded.\n\nOur entire presidency will be decided by the results of these elections, so we must ensure we do well. If we can atleast get the progressives below 50%, we will be able to pass most of our agenda. If we can outperform expectations and secure a 2/3rds majority, however, then several §Gadditional§! focuses will be unlocked."
+ww1_USA_clark.1.t:0 "A Vote for Conservatives is a Vote for a Functional Government"
+ww1_USA_clark.1.d:0 "Clark and the current majority of combined progressive Democrats and Republicans will never be able to govern properly. The progressives have made it clear that they will not compromise with Clark, and thus are unsuitable for governance during Clarks presidency.\n\nClarks allies have been intensifying this message of an obstructionist congress as of late in an attempt to sway voters in the next midterms. While a lot of voters are in favor of progressive reforms, playing on the narritive that progressives are simply refusing any sort of reasonable compromises will hopefully make voters think twice about their support."
+ww1_USA_clark.1.a:0 "Make sure to tell obstructionists 'no' in 1914!"
+ USA_beat_elitist_stereotype:0 "Challenge the Elitist Stereotypes"
+ USA_beat_elitist_stereotype_desc:0 "Amongst the American public there is a negative stereotype of the average conservative politician being a rich elitist snob in bed with big business. This is hurting our support amongst the 'common man', and we must challenge this narrative by shifting our 1914 election strategy towards a populist direction."
+USA_big_business_support:0 "Big Business Support"
+prog_lose_2_5: "§SProgressive§! canidates will §Glose§! control of an additional §Y2.5%§! of seats in both United States legislative branches in the 1914 midterms."
+prog_gain_1: "§SProgressive§! canidates will §Rgain§! control of an additional §Y1%§! of seats in both United States legislative branches in the 1914 midterms."
+prog_lose_1: "§SProgressive§! canidates will §Glose§! control of an additional §Y1%§! of seats in both United States legislative branches in the 1914 midterms."
+USA_populist_campaign:0 "Populist Campaign"
 ### Taft
 USA_re_enforce_latin:0 "American Companies Require Government Reassurance"
 USA_deals_with_lobbyists:0 "Deal with Lobbyists"
