--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6226,6 +6226,9 @@ ww1_USA.178.e:0 "Let's see just how long this lasts"
  ww1_usa.101.d:0 "After years of construction, the Panama Canal opened today, estbalishing a more direct connection from Atlantic to Pacific, which will no doubt be a boon to trade in the region, as well as make the area an important strategic location.\n\nAmerican Engineers have stunned the world with this amazing feat - with the exceptions, of course, of the British and Germans, who both insist that their canals are better."
  ww1_usa.101.a:0 "Amazing construction."
  ww1_usa.102.tt:0 "§YPanama Canal will be Unlocked§!\n"
+ww1_USA.139.t:0 "America Offers us Increased Food Imports"
+ww1_USA.139.d:0 "The Great War has had a heavy impact on the daily lifes of our average citizen, with food natually being prioritized for those in the army. While our people arn't outright starving, there has been a noticable reduction in food available for the common man. America is offering to help relieve some of these concerns, with relatively cheap food imports."
+ww1_USA.139.a:0 "We'll keep this in mind"
  ww1_usa.102.a:0 "Let's celebrate, we completed it!"
  ww1_usa.105.t:0 "Occupation of Veracruz"
  ww1_usa.105.a:0 "Missed localisation? Are you kidding?"
