--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -909,6 +909,18 @@ FRA_support_boulangisme_desc:0 "General and Minister of War George Boulanger was
 FRA_constitutionalize_strike_right:0 "Constitutionalize Strike Right"
 FRA_constitutionalize_strike_right_desc:0 "Although it is admitted de facto, the right to strike is not institutionalized in France...\n\n§YNapoléon§! proposed a law to enshrine in the constitution the right of employees to strike. Authorized trade union organizations will only need to notify their employer 8 days in advance."
 
+yourself:0 "\n(§Y[ROOT.getFlag][ROOT.getName]§!):"
+
+tt_objective:0 "\n§YTo Complete :§!"
+FRA_shneider_artillery_manufactures_in_le_havre:0 "Build Schneider Artillery Manufactures in [15.getName]"
+FRA_shneider_artillery_manufactures_in_le_havre_desc:0 "The company Schneider et Cie bought the artillery factories of Forges et Chantiers de la Méditerranée in 1897. Located in Le Havre, they have not yet renovated and the state could finance their reconstruction to allow mass production of the 75mm cannon."
+FRA_shneider_artillery_manufactures_in_le_havre_mission:0 "Build Schneider Artillery Manufactures in [15.getName]"
+FRA_shneider_artillery_manufactures_in_le_havre_mission_desc:0 "The company Schneider et Cie bought the artillery factories of Forges et Chantiers de la Méditerranée in 1897. Located in Le Havre, they have not yet renovated and the state could finance their reconstruction to allow mass production of the 75mm cannon."
+FRA_shneider_artillery_manufactures_in_le_havre_mission_tt_title:0 "Build §Y2 Military Factories§! in §Y[15.getName]§!"
+FRA_shneider_artillery_manufactures_in_le_havre_mission_tt:0 "[?15.arms_factory_level|+0]/§Y[?15.military_total_after_goal]§! §YMilitary Factories§! built in §Y[15.getName]§!"
+
+military_contract_flag:0 "Is Already fulfilling a construction contract"
+
 FRA_sponsored_worker_pension:0 "Sponsored Worker Pension"
 FRA_sponsored_worker_pension_desc:0 "§YNapoléon§! proposed improving the pension system by extending it to all recognized jobs in France. The pension will be funded by three parties: the state, the employer and the pensioner himself through special taxes."
 
@@ -8914,7 +8926,8 @@ FRA_vote_will_fail:0 "§RThe vote will likely fail.§!"
 FRA_vote_will_pass:0 "§GThe vote shall pass !§!"
 FRA_effect_if_law_pass:0 "\n§YEffect if the vote pass :§!"
 FRA_effect_if_law_fail:0 "\n§REffect if the vote fail :§!"
-
+FRA_effect_if_mission_completed:0 "\n§GEffect if mission is completed :§!"
+FRA_effect_if_mission_failed:0 "\n§REffect if mission is failed :§!"
 
 FRA_fufill_schneider_contract:0 "Fulfill Schneider Contract"
 FRA_fufill_schneider_contract_desc:0 "The government awarded the company Schneider Creusot and its sub-subsidiary Somua a contract to produce 400 medium combat tanks intended to complete the mechanized force validated by the general staff."
