--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -6722,8 +6722,8 @@ FRA_ww1_reform_the_reserve_territoriale_desc:0 "The Barthou law can be amended t
  FRA_ww1_fund_berthier:0 "Fund Berthier Rifles"
  FRA_ww1_fund_berthier_desc:0 "The French army has been using Berthiers rifles since 1890. This family of Lebel caliber weapons represents the spearhead of our land force. In order to maintain the credibility of our army, we must maintain strong investments in order to invent the next generations of rank rifles."
 
- FRA_ww1_fund_schneider:0 "Fund Schneider-Creusot"
- FRA_ww1_fund_schneider_desc:0 "Schneider's artillery guns have equipped many entities of our armies, from our mortars to our most modern battleships. The extension of gun range makes the need to invest in Schneider-Creusot more and more pressing. The slightest relaxation will grant the Germans a fatal advance."
+ FRA_ww1_fund_schneider:0 "Fund Schneider"
+ FRA_ww1_fund_schneider_desc:0 "Schneider's artillery guns have equipped many entities of our armies, from our mortars to our most modern battleships. The extension of gun range makes the need to invest in Schneider more and more pressing. The slightest relaxation will grant the Germans a fatal advance."
 
  FRA_ww1_motorization:0 "Motorize the Army"
  FRA_ww1_motorization_desc:0 "The advances in the automobile are dazzling, they make it possible to track heavy loads over hundreds of kilometres. We could take a significant lead over our competitors by selecting a national company committed to the design of infantry transport vehicles."
