--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6435,8 +6435,14 @@ ww1_USA.60.d:0 "Over the past few years, Nicaragua has been facing multiple cons
 ww1_USA.59.t:0 "Roosevelt Announces Run for Republican Nominee"
 ww1_USA.59.d:0 "Stating he would "gladly accept" a Republican nomination for president, Roosevelt has confirmed the fears of many, that he will be challenging taft next November. While favored amongst the general population, Roosevelt and Taft are bitterly close amongst support of the party higherups, who actually nominate the president in most states."
 ww1_USA.59.a:0 "Shit, shit!"
+USA_sell_infantry:0 "Purchase American Rifles"
+USA_sell_artillery:0 "Sell Artillery"
+USA_sell_medical_equipment:0 "Sell Medical Equipment"
 ww1_USA.58.t:0 "Chevrolet Competes With Ford Motor"
 ww1_USA.58.d:0 "Ford Motor, who has never had to deal with much competition in the automobile market, has faced new competition as a promising company named Chevrolet has recently announced its new automobile avaible for sale. Already, sales of automobiles are reaching new highs as Chevrolet and Ford Motor compete to make better and cheaper cars!"
+ww1_USA.140.t:0 "The Gifts of American Capitilism"
+ww1_USA.140.d:0 "While the United States government is refusing the sale of military equipment to all nations, we may be able to get our hands on American weapons anyways. Several large private producers of military equipments have announced that they will be selling their equipment to several foreign countries, including ours. If we are running low on any equipment, we should purchase some equipment from these corporations."
+ww1_USA.140.a:0 "We'll keep it in mind"
 ww1_USA.58.a:0 "Capitalism breeds innovation!"
 ww1_USA.92.t:0 "State Delegates Throw Support Behind Clark"
 ww1_USA.92.d:0 "Seeing Clark as the best fit for the job, several state delegate leaders have began to endorse Clark, and promise their states votes in the upcoming convention. While the race seems completed locked in for Clark, supporters of Wilson still argue the primary is not over until it is over."
