--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -53,6 +53,9 @@
  decision_cost_CP_50_10_civ:0 "£command_power §Y50§! £civ_factory£ §Y10§!"
  decision_cost_CP_50_10_civ_blocked:0 "£command_power §R50§! £civ_factory£  §R10§!"
  decision_cost_CP_50_10_civ_tooltip:0 "It costs £command_power §Y50§! £civ_factory£ §Y10§! to take the decision"
+ decision_cost_1_civ:0 "£civ_factory£ §Y1§!"
+ decision_cost_1_civ_blocked:0 "£civ_factory£  §R1§!"
+ decision_cost_1_civ_tooltip:0 "It costs £civ_factory£ §Y1§! to take the decision"
  decision_cost_2_civ:0 "£civ_factory£ §Y2§!"
  decision_cost_2_civ_blocked:0 "£civ_factory£  §R2§!"
  decision_cost_2_civ_tooltip:0 "It costs £civ_factory£ §Y2§! to take the decision"
@@ -339,8 +342,8 @@
  GER_annex_new_east_prussia_desc:0 "There was a time, a century ago, when the Kingdom of Prussia gained new territory from Poland, beyond East Prussia. The territory between East Prussia and the Vistula, Bug, and Neman rivers was called New East Prussia (Neuostpreußen), and if we prevail in the Great War, it should rightfully belong to Prussia, [ROOT.GetNameDef]."
  GER_add_submarines:0 "Lay Down the U-Boots"
  GER_add_submarines_desc:0 "This decision is availabe only in §Yeasiest difficulty§! or §Ydebug mode§!."
- GER_mission_before_the_leaves_fall_desc:0 ""You will be home before the leaves have fallen from the trees.""
  before_the_leaves_fall:0 "Before the Leaves Fall"
+ before_the_leaves_fall_desc:0 ""You will be home before the leaves have fallen from the trees."\nBut if this turns out to be a lie, it means that we have forced and deceived the young generation into hell on earth. Who is responsible for this?"
  before_the_leaves_fall_flag:0 "The Great War has ended in less than a few weeks"
  before_the_leaves_fall_failed:0 "The Second Franco-German War has escalated into the Great War"
  
