Fix and tweak Mudros again

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1032,16 +1032,16 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  member_of_entente_armistice:0 "Refuse to Surrender"
  member_of_entente:0 "Enemy of Central Powers\n"
  member_of_centre_armistice:0 "Refuse to Surrender"
- compiegne_armistice:0 "Compiegne Armistice\n"
- compiegne_armistice_mission:0 "Compiegne Armistice"
+ compiegne_armistice:0 "Armistice of Compiègne\n"
+ compiegne_armistice_mission:0 "Armistice of Compiègne"
  compiegne_armistice_message:0 "§YFrance§! and §YEntente§! are victorious. §YGermany§! and §Yher allies§! will have to pay the prices demanded by the victors in the post-war treaty."
  versallies_conference:0 "Paris Peace Conference"
  versallies_conference_desc:0 "Politicians from Entente countries and nationalists is making important decisions such as the establishment of the League of Nations, conclude treaties with the defeated countries, and establishment the mandates in which the victorious country rules over the foreign territories of the defeated country, retaliation against Germany, also discuss the re-establishment of country borders that reflecting national boundaries."
  versallies_treaty:0 " Treaty of Versailles "
  member_of_central_powers:0 "Enemy of Entente\n"
  refused_to_surrender:0 "Refused to surrender\n"
- frankfurt_armistice:0 "Frankfurt Armistice\n"
- frankfurt_armistice_mission:0 "Frankfurt Armistice"
+ frankfurt_armistice:0 "Armistice of Frankfurt\n"
+ frankfurt_armistice_mission:0 "Armistice of Frankfurt"
  frankfurt_armistice_tt:0 "The Great War ended in the defeat of Entente."
  frankfurt_armistice_message:0 "§YGermany§! and §Ythe Central Powers§! are victorious. §YFrance§! and §Yher allies§! will have to pay the prices demanded by the victors in the post-war treaty."
  frankfurt_conference:0 "Frankfurt Conference"
@@ -8205,7 +8205,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  interwar_recovery_removal_complete:0 "Economic Reconstruction is Completed"
  
  flag_tsar_nicholas_abdicated:0 "Tsar Nicholas abdicated"
- great_war_france_frankfurt_flag:0 "Frankfurt Armistice"
+ great_war_france_frankfurt_flag:0 "Armistice of Frankfurt"
  kis_franzferdinand_murdered:0 "Franz Ferdinand is dead"
  july_crisis_ends:0 "Response on ultimatum"
  kis_serbia_refuse:0 "Serbia refused"
