--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -34,10 +34,11 @@
  idea_army_restrictions_desc:0 "After the defeat of in the Great War, [ROOT.GetAdjective] army was reduced and has no right to expand."
  idea_army_restrictions_tt:0 "£trigger_no Can not expand the army\n"
  idea_armistice:0 "[Root.GetIdeaArmisticeName]"
- idea_frankfurt_armistice:0 "Frankfurt Armistice"
- idea_compiegne_armistice:0 "Compiegne Armistice"
+ idea_frankfurt_armistice:0 "Armistice of Frankfurt"
+ idea_compiegne_armistice:0 "Armistice of Compiègne"
  idea_rus_ger_armistice:0 "Russo-German Armistice"
  idea_armistice_romania:0 "Treaty of Bucharest"
+ idea_armistice_mudros:0 "Armistice of Mudros"
  idea_armistice_generic:0 "Armistice"
  idea_armistice_desc:0 "[Root.GetIdeaArmisticeDesc]"
  idea_armistice_desc_ww1:0 "After the Great War, armistice countries cannot resume bloody wars."
@@ -1716,7 +1717,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  AUH_normalize_relations:0 "Normalize Relations"
  pig_war_is_active:0 "The Pig War is active"
  #INTERWAR IDEAS
- idea_great_war_armistice:0 "Compiegne Armistice"
+ idea_great_war_armistice:0 "Armistice of Compiègne"
  idea_great_war_armistice_desc:0 "The nation lost the Great War. Before the start of the peace conference, the country must demobilize the army."
  pig_war:0 "Pig War | Austria-Hungarian - Serb Economic War"
 
