--- a/localisation/english/ww1_modifiers_l_english.yml
+++ b/localisation/english/ww1_modifiers_l_english.yml
@@ -53,7 +53,7 @@
  stalin_leader:0 "Stalin is leader"
  trotsky_leader:0 "Trotsky is leader"
  russian_polish_treat:0 "Riga Treaty was signed"
- kis_ask_ger_surrend:0 "Compiegne armistice"
+ kis_ask_ger_surrend:0 "Armistice of Compiègne"
  ukraninian_russian_treat:0 "Treaty with Ukraine was signed"
  rusrevolt_new_sov_generals:0 "Many commanders of Red Army will retire and will be replaced by new leaders."
  entente_helps:0 "Help Entente"
