--- a/localisation/english/ww1_super_global_flag_l_english.yml
+++ b/localisation/english/ww1_super_global_flag_l_english.yml
@@ -12,6 +12,6 @@
  entente_leader:0 "Has taken over the leadership of the Entente"
 
  great_war_armistice_flag:0 "[Root.GetName] is asking for a truce "
- compeigne_armistice_flag:0 "Compiegne Armistice "
+ compeigne_armistice_flag:0 "Armistice of Compiègne"
  refuse_compeigne_armistice_flag:0 "There will be no truce! "
  interwar_wall_street_crash_1929:0 "Wall Street Crash"
