--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -307,7 +307,7 @@
  GER_defensive_line_in_arras:0 "Fortify Arras"
  GER_defensive_line_in_arras_desc:0 "Set up trenches and barbed wires in the plains of Northern France to stop the enemy rapid advance. Let no one pass there!"
  GER_defensive_line_in_arras_tt:0 "Adds §Y2 Land Fort§! in §Y[29.GetName].§!"
- GER_defensive_line_in_compiegne:0 "Fortify Compiegne"
+ GER_defensive_line_in_compiegne:0 "Fortify Compiègne"
  GER_defensive_line_in_compiegne_desc:0 "Building a defensive line along the banks of the Oise River makes it easy to have excellent fortifications guarded up by natural structures."
  GER_defensive_line_in_compiegne_tt:0 "Adds §Y2 Land Fort§! in §Y[785.GetName].§!"
  GER_defensive_line_in_gent:0 "Fortify Gent"
