--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -10756,7 +10756,7 @@ FRA_leave_MOR: "Leave Morocco"
  ww1_centre_capitulation.1.d: "A German delegation headed by Matthias Erzberger has returned from a meeting with Marshal Foch aboard a train near Compiègne, with full notice of German surrender. The war is over, and now the winners will recieve their spoils. A German state will survive, but little else is certain as of now."
  ww1_centre_capitulation.1.a: "Peace at last!"
  ww1_centre_capitulation.1.b: "The war will stop at Berlin"
- ww1_centre_capitulation.2.t: "Armistice of Compiegne"
+ ww1_centre_capitulation.2.t: "Armistice of Compiègne"
  ww1_centre_capitulation.2.d: "The Central Powers are not able to effectively fight further. They are asking for an armistice from the Entente, which means that the war is finally over, and the Central Powers have lost! The Great Powers will soon cease the endless gunfire and bloodshed. A new era has arrived, as the political geography changes drastically, and the old order is completely shattered. The Great War, which resulted in the deaths of millions of innocent of people, has now finally ended. May the dead rest in peace."
  ww1_centre_capitulation.2.a: "It's over.."
  ww1_centre_capitulation.2.b: "We have won!"
