--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14550,3 +14550,17 @@ FRA_emperor_will_appoint_a_prime_minister:0 "§YEmperor Louis Napoléon§! will 
  ww1_france.445.t:0 "Communist Terrorism in Provinces"
  ww1_france.445.d:0 "Several newspapers such as "Action Française" and "Le Figaro" have displayed an impressive list of offenses and crimes committed by radical socialists. Spread over 6 pages, it traces all the abuses committed by supporters of the ultra-left, ranging from theft to premeditated murder. These publications highlight the visceral danger caused by anarchic trade unionist extremism."
  ww1_france.445.a:0 "They must be stopped"
+
+
+ ww1_france.446.t:0 "[FROM.getName] Ask for Investments"
+ ww1_france.446.d:0 "We received a message from the [FROM.getAdjective] autonomous government. [FROM.getNameDefCap] is requesting funds of [?random_funds|*1] francs to assist the development of their territory, particularly the capital [FROM.Capital.GetCapitalVictoryPointName] and parts of [FROM.Capital.getName]. If we agree to propose such an agreement to the government, we would need the support of at least 200 deputies, so that we have a chance of passing the vote on this investment law."
+ ww1_france.446.a:0 "Sure, lets vote a new budget"
+ ww1_france.446.b:0 "We cant allow it..."
+
+ ww1_france.447.t:0 "[FROM.getName] Accepted!"
+ ww1_france.447.d:0 "The French government has agreed to provide us the requested assistance. The latter was passed by their parliament, granting us an immediate allocation of funds."
+ ww1_france.447.a:0 "Fantastic!"
+
+ ww1_france.448.t:0 "[FROM.getName] Refused!"
+ ww1_france.448.d:0 "The French government has refused to provide us the requested assistance."
+ ww1_france.448.a:0 "Argh!"
