--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -6968,6 +6968,7 @@ FRA_ww1_cartel_des_droites_desc:0 "The union of the French right is a reality wh
 
 
  FRA_150_seats_with_flag:0 "[FRA.GetFlag]§YFrance:§! Control 150 seats"
+ FRA_200_seats_with_flag:0 "[FRA.GetFlag]§YFrance:§! Control 200 seats"
  FRA_250_seats_with_flag:0 "[FRA.GetFlag]§YFrance:§! Control 250 seats"
  FRA_300_seats_with_flag:0 "[FRA.GetFlag]§YFrance:§! Control 300 seats"
  FRA_350_seats_with_flag:0 "[FRA.GetFlag]§YFrance:§! Control 350 seats"
