--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -739,7 +739,7 @@
  UBD_fascism_party:0 "Verband der Ordensgründer"
  UBD_communism_party:0 "Mežabrāļi"
  
- IRQ_neutrality_party:0 "Hashemites"
+ IRQ_neutrality_party:0 "Al Hashimiyyun"
  IRQ_fascism_party:0 "HIW"
  IRQ_fascism_party_long:0 "Party of National Brotherhood"
  IRQ_communism_party:0 "ICP"
@@ -1210,13 +1210,13 @@
  PAN_communism_party:0 "Partido Laborista"
  PAN_neutrality_party:0 "Partido Conservador"
  
- SAU_neutrality_party:0 "House of Saud"
- SAU_fascism_party:0 "House of Saud"
+ SAU_neutrality_party:0 "Al Saud"
+ SAU_fascism_party:0 "Al Saud"
  
- YEM_neutrality_party:0 "Rassids"
- YEM_fascism_party:0 "Rassids"
+ YEM_neutrality_party:0 "Banu Al Rusi"
+ YEM_fascism_party:0 "Banu Al Rusi"
  
- OMA_neutrality_party:0 "Ibadi Sect"
+ OMA_neutrality_party:0 "Al Bu Said"
  OMA_fascism_party:0 "Ibadi Sect"
  
  MSC_neutrality_party:0 "House of Al Said"
@@ -1302,7 +1302,7 @@
  SYR_fascism_party_long:0 "Syrian Social Nationalist Party"
  SYR_communism_party:0 "Syrian Communist Party"
  SYR_democratic_party:0 "National Bloc"
- SYR_neutrality_party:0 "Hashemites"
+ SYR_neutrality_party:0 "Al Hashimiyyun"
  
  LEB_fascism_party:0 "Kataeb"
  LEB_neutrality_party:0 "Maronite Patriarchy"
@@ -1310,13 +1310,13 @@
  LEB_democratic_party:0 "Beirut Reform Movement"
  
  JOR_fascism_party:0 "Jordanian Phalange"
- JOR_neutrality_party:0 "Hashemite"
+ JOR_neutrality_party:0 "Al Hashimiyyun"
  JOR_democratic_party:0 "National Liberal Party"
  JOR_communism_party:0 "Jordanian Workers Society"
  
  EGY_communism_party:0 "al-Hizb al-Aishtirakiu al-Misriu"
  EGY_democratic_party:0 "Hizb al-Wafd"
- EGY_neutrality_party:0 "Alawiyya Dynasty"
+ EGY_neutrality_party:0 "Al Usrah Al Alawiyya"
  
  PAL_democratic_party:0 "Muslim-Christian Society"
  PAL_democratic_party_long:0 "Jerusalem Muslim-Christian Society"
@@ -1396,10 +1396,10 @@
  TRK_fascism_party:0 "Basmachi"
  TRK_neutrality_party:0 "Shuro-I-Ulema"
  
- JBS_neutrality_party:0 "House of Rashid"
+ JBS_neutrality_party:0 "Al Rashid"
  
- LBA_neutrality_party:0 "Al Sanusia"
- LBA_fascism_party:0 "Al Sanusia"
+ LBA_neutrality_party:0 "Al Sanussiyya"
+ LBA_fascism_party:0 "Al Sanussiyya"
  
  VLN_communism_party:0 "Makhnovtsі"
  VLN_communism_party_long:0 "Makhnovskiy Rukh"
@@ -1448,9 +1448,11 @@
  PRI_communism_party:0 "Zemskaya uprava"
  PRI_communism_party_long:0 "Primorskaya oblastnaya zemskaya uprava"
 
- HJZ_neutrality_party:0 "Hashemites"
+ HJZ_neutrality_party:0 "Al Hashimiyyun"
+ HJZ_democratic_party:0 "HHW"
+ HJZ_democratic_party_long:0 "Al Hizb Al Hejazi Al Watani"
 
- MOR_neutrality_party:0 "House of Alaoui"
+ MOR_neutrality_party:0 "Al Sulalah Al Alouiyah"
  MOR_french_colonial_party:0 "Administration Coloniale"
  MOR_spanish_colonial_party:0 "Administración Colonial"
  
@@ -1461,9 +1463,9 @@
  LIB_democratic_party:0 "People's Party"
  LIB_monarchist_party:0 "House of Momulu"
  
- QAT_neutrality_party:0 "House of Al Thani"
+ QAT_neutrality_party:0 "Al Thani"
  
- ASR_neutrality_party:0 "Idrisi Dynasty"
+ ASR_neutrality_party:0 "Al Idrisiyeen"
  
  INS_democratic_party:0 "Volksraad"
  INS_communism_party:0 "PKI"
@@ -1532,11 +1534,11 @@
  SHL_fascism_party:0 "SHLP"
  SHL_fascism_party_long:0 "Schleswig-Holsteinische Landespartei"
  
- KUW_neutrality_party:0 "House of Al Sabah"
+ KUW_neutrality_party:0 "Al Sabah"
  KUW_democratic_party:0 "Majlis al-Shura"
  KUW_ENG_party:0 "British Political Agency"
 
- BHR_neutrality_party:0 "House of Khalifa"
+ BHR_neutrality_party:0 "Al Khalifa"
  
  ERI_neutrality_party:0 "Bahri Negash"
  
@@ -1558,7 +1560,7 @@
  
  RYU_neutrality_party:0 "Shō Clan"
  
- TUN_neutrality_party:0 "Husainid Dynasty"
+ TUN_neutrality_party:0 "Al Bayat Al Hussienyun"
  TUN_democratic_party:0 "Harakat ash-shabāb"
  TUN_democratic_party_long:0 "Harakat ash-shabāb al-Tūnisi"
  TUN_communism_party:0 "Harakat ash-shabāb"
@@ -1848,7 +1850,7 @@
 
  JKS_neutrality_party:0 "Dogra Dynasty"
 
- RWL_neutrality_party:0 "House of Sha'lan"
+ RWL_neutrality_party:0 "Al Sha'lan"
 
  AMR_neutrality_party:0 "Amarat Tribe"
 
