--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1216,12 +1216,12 @@
  YEM_neutrality_party:0 "Banu Al Rusi"
  YEM_fascism_party:0 "Banu Al Rusi"
  
- OMA_neutrality_party:0 "Al Bu Said"
+ OMA_neutrality_party:0 "Ibadi Sect"
  OMA_fascism_party:0 "Ibadi Sect"
  
- MSC_neutrality_party:0 "House of Al Said"
+ MSC_neutrality_party:0 "Al Bu Said"
  
- ZAN_neutrality_party:0 "House of Al Said"
+ ZAN_neutrality_party:0 "Al Bu Said"
  
  UAE_neutrality_party:0 "Al-Imārāt al-Mutasāliha"
  UAE_democratic_party:0 "Al-Imārāt al-Mutasāliha"
