RAJ Events UPDATE

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9395,8 +9395,8 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.4.a:0 "One step at a time."
 
  ww1_raj.5.t:0 "Hardinge Resigns."
- ww1_raj.5.d:0 "PLACEHOLDER"
- ww1_raj.5.a:0 "He now returns to England."
+ ww1_raj.5.d:0 "Charles Hardinge, 1st Baron Hardinge of Penshurst, has resigned as Viceroy of India after six years in office. His tenure saw significant reforms, including the relocation of the capital of the Raj and various construction and modernisation efforts. Although being the target of an assassination attempt in 1912, Lord Hardinge continued to entertain good relations with the Indian People. Which has served him well to push various reforms such as the Indian Factories Act or the Government of India Act. He will be succeeded by Frederic Thesiger, 1st Viscount Chelmsford."
+ ww1_raj.5.a:0 "Very well."
 
  ww1_raj.6.t:0 "Question of the Capital"
  ww1_raj.6.d:0 "Our capital has been Calcutta since the formal establishment of the Raj in 1857. However, the city has its share of faults; overcrowding, sanitation problems, frequent outbreaks of disease and the base of many nationalist movements. Our administration has suggested that a change of capital may be in order, and [RAJ.getleader] must now decide.\n\nDelhi is the most likely option as it is more centrally located within the British Indian Empire, making it a more suitable administrative centre to govern the vast territories of the subcontinent. Delhi also has symbolic status as the former capital of the Mughal Empire.\n\nBombay is a major port city on our west coast, making it strategically important for trade and commerce. It also has a much better infrastructure, which Delhi lacks. Of course, we can always stay in Calcutta."
@@ -9465,13 +9465,34 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.19.a:0 "Suspend the tax for now."
  ww1_raj.19.b:0 "Supress theses dangerous terrorists."
 
- ww1_raj.20.t:0 "Jallianwala Bagh massacre"
+ ww1_raj.20.t:0 "Jallianwala Bagh Massacre"
  ww1_raj.20.d:0 "PLACEHOLDER"
  ww1_raj.20.a:0 "Was this necessary ? God only knows."
 
- ww1_raj.21.t:0 "Non-cooperation movement"
+ ww1_raj.21.t:0 "Non-cooperation Movement Launched"
  ww1_raj.21.d:0 "PLACEHOLDER"
- ww1_raj.21.a:0 ""
+ ww1_raj.21.a:0 "Let's hope this doesn't devolve into violence."
+
+ ww1_raj.22.t:0 "Second Hearing of the Howrah-Sibpur Conspiracy Case"
+ ww1_raj.22.d:0 "PLACEHOLDER"
+ ww1_raj.22.a:0 "Let's hope they've learned their lesson."
+
+ ww1_raj.23.t:0 "Bharoto Bhagyo Bidhata"
+ ww1_raj.23.d:0 "PLACEHOLDER"
+ ww1_raj.23.a:0 "Beautiful."
+
+ ww1_raj.24.t:0 "Malankara Orthodox-Jacobite Church Dispute"
+ ww1_raj.24.d:0 "A schism within the Malankara Syrian Church has led to an ongoing series of ecclesiastical disputes in Kerala, India. The dispute, now known by various names (Malankara Orthodox-Jacobite Church Dispute, the Schism of 1912, the Second Community Case or even the Second Vattippana Case), has been intertwined with continuous litigation and has resulted in the formation of two rival ecclesiastical bodies, namely the autocephalous Malankara Orthodox Syrian Church and the Malankara Jacobite Syrian Orthodox Church, an autonomous church under the Syriac Orthodox Patriarchate of Antioch."
+ ww1_raj.24.a:0 "Let's hope this will soon blow off."
+ RAJ_it_fucking_continues:0 "§YMore than a century later, this conflict is still very much alive.§!"
+
+ ww1_raj.25.t:0 "Mangarh Massacre"
+ ww1_raj.25.d:0 "PLACEHOLDER"
+ ww1_raj.25.a:0 ""
+
+ ww1_raj.26.t:0 ""
+ ww1_raj.26.d:0 "PLACEHOLDER"
+ ww1_raj.26.a:0 ""
 
  ww1_raj.27.t:0 "Assasination Attempt Against Viceroy Charles Hardinge"
  ww1_raj.27.d:0 "The Viceroy and the Vicerine were riding on an elephant, making their ceremonial entry into the capital of India, when 17-year-old Basanta Kumar Biswas, a revolutionary from the village of Nadia, threw a homemade bomb at the Viceroy. Although the umbrella-bearer was killed, the Vicerine and the elephant remained unscathed. Lord Hardinge, however, was injured by shrapnel over his back, legs and head, and the flesh on his shoulders was torn into strips. There was some difficulty in removing the Viceroy from the back of the elephant on which they were travelling, and our doctors are still uncertain regarding the Viceroy's fate."
@@ -9482,6 +9503,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.28.t:0 "Garret O'Moore Creagh Steps Down."
  ww1_raj.28.d:0 "PLACEHOLDER"
  ww1_raj.28.a:0 "It's time to close this dark chapter in the Raj's history."
+
+ ww1_raj.29.t:0 ""
+ ww1_raj.29.d:0 ""
+ ww1_raj.29.a:0 ""
   
  # PORTUGAL
  ww1_portugal.1.t:0 "Join the Entente"
