Tweak Balkan wars

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1460,6 +1460,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  BOS_rebellion_planed:0 "Bosnia is planning a Rebellion"
  SER_invest_into_bosnian_liberation_army:0 "Invest into Bosnian Liberation Army"
  SER_the_romanian_bridgehead:0 "The Romanian Bridgehead"
+ SER_bll_join_allies:0 "Join the [FROM.GetFactionName]"
+ SER_bll_join_allies_desc:0 "[ROOT.GetFactionName] had already been drawn into the chaos of a larger war. There is no point in keeping small regional coalition anymore, we need to gain allies on the international stage."
 
 
 
